# AgentCensus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
examples/: sample-report.html
src/agent_census/: __init__.py  __main__.py  cli.py  errors.py  findings.py  models.py  normalize.py
src/agent_census/fixtures/: demo_estate.json
src/agent_census/live/: __init__.py  auth.py  constants.py  dataverse.py  foundry.py  gcp.py
src/agent_census/report/: __init__.py  html.py  json_out.py
src/agent_census/report/assets/: report.css  report.js  template.html
src/agent_census/sources/: __init__.py  all.py  base.py  copilot_studio.py  demo.py  foundry.py  gcp.py
tests/: test_all_source.py  test_auth.py  test_cli.py  test_demo.py  test_findings.py  test_foundry.py  test_gcp.py  test_live.py  test_models.py  test_normalize.py  test_report_html.py
