[project]
name = "agentcensus"
version = "0.2.0"
description = "Discover AI agents (Microsoft Copilot Studio + Azure AI Foundry, and Google Cloud) and emit a self-contained HTML governance report."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai-agents", "copilot-studio", "azure-ai-foundry", "governance", "discovery", "inventory"]
authors = [{ name = "agentcensus contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "httpx>=0.27",
    "msal>=1.28",
]

[project.optional-dependencies]
# Optional: prettier, colored terminal summary (`uv sync --extra rich`).
rich = ["rich>=13"]
# Optional: Google Cloud service-account-key / ADC auth (`uv sync --extra gcp`).
# Not needed for `--auth gcloud` (shell-out), the demo path, or Microsoft sources.
gcp = ["google-auth>=2.30"]

[project.urls]
Homepage = "https://github.com/kjack3434/AgentCensus"
Issues = "https://github.com/kjack3434/AgentCensus/issues"

[project.scripts]
agentcensus = "agent_census.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_census"]
artifacts = [
    "src/agent_census/report/assets/*",
    "src/agent_census/fixtures/*",
    "src/agent_census/py.typed",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15.19",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "SIM", "PERF"]

[tool.ruff.lint.flake8-bugbear]
# Typer's declarative option/argument defaults are the intended pattern.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert and synthetic "secrets"; the Azure CLI shell-out is intentional.
"tests/*" = ["S101", "S105", "S106"]
"src/agent_census/live/auth.py" = ["S603", "S607"]

[tool.ruff.format]
# Black-compatible defaults; declared explicitly so CI and editors agree.

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportMissingModuleSource = false

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib --cov=agent_census --cov-report=term-missing"
testpaths = ["tests"]
